# stl

./: .gitignore  README.md  index.html  presentation_array.md  presentation_deque.md  presentation_forward_list.md  presentation_homework.md  presentation_list.md  presentation_stl.md  presentation_vector.md
.github/: CODEOWNERS
01-containers/: 00-intro.md  01-post-work.md  02-recap.md
01-sequence-containers/: 00-intro.md  01-vector.md  02-array.md  03-list.md  04-forward-list.md  05-deque.md  07-recap.md  08-homework.md  homework1.cpp
02-function-objects/: 00-intro.md  01-functions.md  01_functors.pl.md  02-pointers-to-functions.md  03-functors.md  04-lambda.md  05-std-function.md
03-iterators/: 01-iterators.md  02-task.md  02_iterators.pl.md  03-functions.md  middle.cpp
04-algorithms/: 01-pretest.md  02-preview.md  03-warm-up-task.md  04-algo-versions.md  05-non-modifying-algos.md  06-modifying-algos.md  07-partitioning-algos.md  08-sorting-algos.md  09-binary-search-algos.md  10-set-algos.md  11-min-max-algos.md  11-pretest-answers.md  12-numeric-algos.md  13-execution-policies.md  14-recap.md  16-homework.md  16-post-work.md  XX_algorithms.pl.md  XX_algorithms_nonmodifying.pl.md  find-vs-search.cpp  generate-ve-transform.cpp  reduce.cpp  script.md  sort-unique-shuffle.cpp  sorting.cpp
05-associative-containers/: 00-pre-test.md  01-intro.md  01-map-multimap.md  02-map-multimap.md  02-set-multiset.md  03-hashing.md  03-set-multiset.md  04-unordered-containers.md  05-hashing.md  06-pre-test-answers.md  06-recap.md  07-pre-test-answers.md  08-homework.md  XX_associative_containers.pl.md
06-streams/: 01-streams.md  01_istream_fstream.en.md  01_istream_fstream.pl.md  02-fstream.md  02_pod.en.md  02_pod.pl.md  03-pod.md  04-stringstream.md
07-complexity/: 01-complexity.md  01_computational_complexity.en.md  01_computational_complexity.pl.md  02-tasks.md  03-recap.md
STL2/: STL_2.md
STL2/exercise4/: CMakeLists.txt  test_exercise4.cpp
homework/: s
homework/advanced-calculator/: .clang-format  CMakeLists.txt  Command.cpp  Command.hpp  Commands.cpp  Commands.hpp  ErrorCode.hpp  ExpressionParser.cpp  ExpressionParser.hpp  Parsing_iterator.cpp  Parsing_iterator.hpp  README.md  Result.cpp  Result.hpp  SeparatorFormat.hpp  Types.hpp  VectorOfFunctions.hpp  advancedCalculator.cpp  advancedCalculator.hpp  advancedCalculatro.cpp  check.cpp  main.cpp  test.cpp
homework/transform-containers/: CMakeLists.txt  RemoveDuplicates.hpp  generate_map.cpp  generate_map.hpp  homework.cpp  homework.hpp  main.cpp  mapMaking.cpp  mapMaking.hpp  mapTransform.cpp  mapTransform.hpp  mergeConteiners.cpp  mergeConteiners.hpp  removeDuplicateAndTranformToMap.cpp  removeDuplicateAndTranformToMap.hpp  test.cpp  transcont.cpp  transcont.hpp  transform-containers.cpp  transform-containers.hpp  transform.cpp  transform.h  transform.hpp  transformContainer.cpp  transformContainer.h  transformContainers.cpp  transformContainers.hpp  transform_containers.cpp  transform_containers.h  transform_containers.hpp  transformation.cpp  transformation.hpp  transformator.cpp  transformator.hpp  transformcontainers.cpp  transformcontainers.hpp  transformer.cpp  transformer.hpp  transformers.cpp  transformers.hpp
html/: 01-containers-pl.html  01-containers.html  01-sequence-containers.html  02-function-objects.html  03-iterators.html  04-algorithms.html  05-associative-containers.html  06-streams.html  07-complexity.html
img/: pgm
module1/: 01_stl.en.md  01_stl.pl.md  02_vector.en.md  02_vector.pl.md  03_array.en.md  03_array.pl.md  04_list.en.md  04_list.pl.md  05_forward_list.en.md  05_forward_list.pl.md  06_deque.en.md  06_deque.pl.md  07_homework.en.md  07_homework.pl.md  index.en.html  index.html  index.pl.html  presentation_array.md  presentation_deque.md  presentation_forward_list.md  presentation_homework.md  presentation_list.md  presentation_stl.md  presentation_vector.md
module2/: 01_functors.en.md  01_functors.pl.md  02_lambda.en.md  02_lambda.pl.md  03_algorithms_nonmodifying.en.md  03_algorithms_nonmodifying.pl.md  04_algorithms_modifying.en.md  04_algorithms_modifying.pl.md  05_homework.en.md  05_homework.pl.md  STL_2.md  index.en.html  index.html  index.pl.html  presentation_algorithms_modifying.md  presentation_algorithms_nonmodifying.md  presentation_homework.md
module2/exercise2/: CMakeLists.txt  remove_vowel.cpp  test.cpp  test_exercise2.cpp
module3/: 01_computational_complexity.en.md  01_computational_complexity.pl.md  02_iterators.en.md  03_algorithms.en.md  03_algorithms.pl.md  04_homework.en.md  04_homework.pl.md  Iterator.md  ZadanieDomowe.md  ZlozonoscObliczeniowa.md  algorithms.md  algorytmy.md  change_position.cpp  computational_complexity.md  homework.md  index.en.html  index.html  index.pl.html  iterators.md
module4/: 01_istream_fstream.en.md  01_istream_fstream.pl.md  02_pod.en.md  02_pod.pl.md  03_associative_containers.en.md  03_associative_containers.pl.md  04_homework.en.md  04_homework.pl.md  ZadanieDomowe.md  homework.md  (+6 more)
module4/homework/appendNewRecipe/: AppendNewRecipe.cpp  AppendNewRecipe.hpp  CMakeLists.txt  README.md  main.cpp  priority_queue.md  queue.md  recipeAppend.cpp  recipeAppend.hpp  recipeAppendTest.cpp  recipes.txt  stack.md  task2.md  test.cpp
(+358 files in other folders)
